--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
 @import "components/user_show_profile_reviews";
 @import "components/listing_show_booking_request";
 @import "components/bookings_made_by_Yourself_card";
+@import "components/listings_new_form";
+@import "components/review_create_form";
 
 // Geocoding
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
@@ -38,4 +40,3 @@ html, body {
 .page-wrapper main {
   flex: 1;
 }
-
