--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,14 +40,14 @@
     </div>
   <% end %>
 
-  <h3>Cancel my account</h3>
-  <div class="cancel-section">
-    Unhappy? 
-    
+  <h3 class="text-center">Cancel my account</h3>
+
+  <div class="cancel-section text-center">
+    <p>Unhappy?</p>
     <%= button_to "Cancel my account", registration_path(resource_name),
-          data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" },
-          method: :delete,
-          class: "btn btn-danger" %>
+                  data: { confirm: "Are you sure you want to permanently delete your account?" },
+                  method: :delete,
+                  class: "btn-danger" %>
   </div>
 
   <%= link_to "Back", :back %>
