--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 
 @import "components/listings";
 @import "pages/devise_edit";
+@import "pages/home";
 
 @import "components/listing_show_reviews";
 @import "components/user_show_profile_reviews";
