--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -5,7 +5,7 @@
            locals: {listing: @listing, booking:(@booking || Booking.new) } %>
 
 <%= render partial: "listings/reviews/listings_reviews_show",
-           locals: { listing: @listing, reviews: @reviews, avg_rate: @avg_rate } %>
+           locals: { listing: @listing, reviews: @reviews, avg_rate: @avg_rate, review: @review } %>
 
 <%= render "listings/geocoding/map_with_marker",
            markers: @markers,
