--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,8 @@
 
   <%= render "listings/listings" %>
 
-
+  <div style="height: 2000px; background: linear-gradient(180deg, #f9f9f9 0%, #ffffff 100%); display: flex; align-items: center; justify-content: center; color: #717171; font-size: 1.5rem;">
+    Scroll down to test navbar
+  </div>
 
 </div>
