put Listing cards and listing form in a container in a row

--- a/app/assets/stylesheets/components/_listings_new_form.scss
+++ b/app/assets/stylesheets/components/_listings_new_form.scss
@@ -2,7 +2,7 @@
 .listing-create-section {
   display: flex;
   justify-content: center;
-  margin: 2rem 0;
+  //margin: 2rem 0;
 
   .w-35 {
     width: 100%;
